Smooth out user creation

--- a/sample.env
+++ b/sample.env
@@ -5,12 +5,11 @@
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://neondb_owner:postgres@localhost:5433/neondb"
 
+NEXT_PUBLIC_APP_NAME="J"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 PRISMA_FIELD_ENCRYPTION_KEY="k1.aesgcm256.9MP99999rYNl_IQxpzcANpYgWLZ_RNmiJbEayAGovY="
 PRISMA_LOG_LEVEL=error,warn
-
-NEXT_PUBLIC_APP_NAME="J"
 
 TEMPORAL_ADDRESS="127.0.0.1:7233"
 # TEMPORAL_UI_URL="http://localhost:8233"
@@ -26,3 +25,4 @@ AWS_S3_BUCKET=degromprod
 
 OPENAI_API_KEY=""
 VOYAGE_API_KEY=""
+LOGROCKET_APP_ID="whrifo/degrom-prod"
