--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "nextjs_starter",
+  "name": "nextjsf_starter",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "engines": {
-    "node": "18",
-    "pnpm": ">=8.15.8 <9.0.0"
+    "node": "20",
+    "pnpm": ">=9.0.0"
   },
-  "packageManager": "pnpm@8.15.8",
+  "packageManager": "pnpm@9.12.2+sha256.2ef6e547b0b07d841d605240dce4d635677831148cd30f6d564b8f4f928f73d2",
   "scripts": {
     "build": "next build",
     "vercel-build": "prisma migrate deploy && next build",
@@ -38,125 +38,116 @@
     "lint:staged": "SKIP_ENV_VALIDATION=true lint-staged --no-stash"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.40",
-    "@aws-sdk/client-s3": "^3.624.0",
-    "@aws-sdk/s3-request-presigner": "^3.624.0",
+    "@ai-sdk/openai": "^0.0.68",
+    "@aws-sdk/client-s3": "^3.679.0",
+    "@aws-sdk/s3-request-presigner": "^3.679.0",
     "@hookform/resolvers": "^3.9.0",
     "@jest/environment": "^29.7.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
-    "@next/env": "^14.2.3",
-    "@node-rs/argon2": "^1.8.3",
+    "@next/env": "15.0.1",
+    "@node-rs/argon2": "^2.0.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@prisma/client": "5.13.0",
-    "@radix-ui/react-collapsible": "^1.1.0",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.1.1",
+    "@prisma/client": "5.21.1",
+    "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@react-email/components": "^0.0.19",
-    "@react-email/render": "^0.0.15",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.25.0",
-    "@temporalio/activity": "^1.11.1",
-    "@temporalio/client": "^1.11.1",
-    "@temporalio/common": "^1.11.1",
-    "@temporalio/worker": "^1.11.1",
-    "@temporalio/workflow": "^1.11.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@react-email/components": "^0.0.25",
+    "@react-email/render": "^1.0.1",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.59.16",
+    "@temporalio/activity": "^1.11.3",
+    "@temporalio/client": "^1.11.3",
+    "@temporalio/common": "^1.11.3",
+    "@temporalio/worker": "^1.11.3",
+    "@temporalio/workflow": "^1.11.3",
     "@trpc/client": "next",
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
-    "ai": "^3.3.0",
-    "axios": "^1.7.2",
+    "ai": "^3.4.18",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "concurrently": "^8.2.2",
-    "cookies-next": "^4.2.1",
-    "dayjs": "^1.11.11",
+    "concurrently": "^9.0.1",
+    "cookies-next": "^4.3.0",
+    "dayjs": "^1.11.13",
     "dotenv-flow": "^4.1.0",
-    "eslint-plugin-rulesdir": "^0.2.2",
-    "geist": "^1.3.0",
+    "geist": "^1.3.1",
     "jest-environment-node": "^29.7.0",
     "lodash": "^4.17.21",
     "logrocket": "^9.0.0",
-    "lucia": "^3.2.0",
-    "lucide-react": "^0.378.0",
+    "lucia": "^3.2.2",
+    "lucide-react": "^0.453.0",
     "mime-types": "^2.1.35",
     "nanoid": "^5.0.7",
-    "next": "^14.2.1",
-    "next-logger": "^5.0.0",
-    "next-superjson-plugin": "^0.6.3",
-    "openai": "^4.52.7",
+    "next": "15.0.1",
+    "openai": "^4.68.4",
     "pdf-lib": "^1.17.1",
-    "pg": "^8.12.0",
+    "pg": "^8.13.1",
     "pgvector": "^0.2.0",
-    "pino": "^9.4.0",
-    "postmark": "^4.0.2",
-    "prisma-field-encryption": "^1.5.2",
-    "qs": "^6.12.3",
-    "query-string": "^9.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-email": "^2.1.4",
-    "react-hook-form": "^7.52.2",
+    "pino": "^9.5.0",
+    "query-string": "^9.1.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-dropzone": "^14.2.10",
+    "react-email": "^3.0.1",
+    "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
-    "react-pdf": "^9.1.0",
-    "react-resizable-panels": "^2.1.2",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-textarea-autosize": "^8.5.3",
-    "react-virtuoso": "^4.10.1",
-    "rehype-katex": "^7.0.0",
+    "react-pdf": "^9.1.1",
+    "react-resizable-panels": "^2.1.5",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-textarea-autosize": "^8.5.4",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.15.1",
-    "type-fest": "^4.22.0",
+    "type-fest": "^4.26.1",
     "voyageai": "0.0.1-5",
-    "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.2",
-    "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.7",
+    "@types/eslint": "^9.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.12",
     "@types/mime-types": "^2.1.4",
-    "@types/node": "^20.11.20",
-    "@types/pg": "^8.11.6",
-    "@types/qs": "^6.9.15",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
+    "@types/node": "^20.17.0",
+    "@types/pg": "^8.11.10",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.0.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
-    "husky": "^9.0.11",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-rulesdir": "^0.2.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.2",
-    "pino-pretty": "^11.2.2",
-    "postcss": "^8.4.34",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "5.13.0",
-    "prisma-lint": "^0.5.0",
-    "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.1.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "lint-staged": "^15.2.10",
+    "pino-pretty": "^11.3.0",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prisma": "5.21.1",
+    "prisma-lint": "^0.7.0",
+    "tailwindcss": "^3.4.14",
+    "ts-jest": "^29.2.5",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.33.1"
