Minor env variable update

--- a/sample.env
+++ b/sample.env
@@ -8,7 +8,7 @@ DATABASE_URL="postgresql://neondb_owner:postgres@localhost:5433/neondb"
 NEXT_PUBLIC_APP_NAME="J"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
-PRISMA_FIELD_ENCRYPTION_KEY="k1.aesgcm256.9MP99999rYNl_IQxpzcANpYgWLZ_RNmiJbEayAGovY="
+# PRISMA_FIELD_ENCRYPTION_KEY="k1.aesgcm256.9MP99999rYNl_IQxpzcANpYgWLZ_RNmiJbEayAGovY="
 PRISMA_LOG_LEVEL=error,warn
 
 TEMPORAL_ADDRESS="127.0.0.1:7233"
